# Orbital

./: .gitignore  Cargo.toml
c-hw2/: Makefile
c-hw2/include/: util.h
c-hw2/src/: main.c  util.c
exam-2/src/: main.rs  util.rs
exam-3/: Cargo.toml  README  exam-linux  exam-mac
exam-3/src/: body.rs  date.rs  macros.rs  main.rs
exam1/: Cargo.toml
exam1/src/: main.rs  util.rs
final/: Makefile  final-linux  final-mac
final/src/: date.h  lambert.h  main.cc  orbitable.cc  orbitable.h  util.h
hw1/src/: get_angle.rs  main.rs
hw3/: Cargo.toml  hw3
hw3/src/: main.rs  util.rs
hw4/: Cargo.toml  Makefile
hw4/include/: body.h  matrix.h  util.h
hw4/src/: body.c  main.c  main.rs  matrix.c  util.c  util.rs
hw5/: Cargo.toml
hw5/src/: body.rs  date.rs  macros.rs  main.rs  util.rs
hw6/: Cargo.toml  README
hw6-c++/: Makefile  main
hw6-c++/src/: body.cpp  body.h  date.h  date.hpp  lambert.h  main.cc  main.cpp  orbitable.cc  orbitable.cpp  orbitable.h  orbitable.hpp  progress.hpp  rang.h  util.h
hw6/src/: body.rs  lambert.rs  main.rs
lebeau-hw6/: Makefile
lebeau-hw6/src/: lambert.h  main.cc  orbitable.cc  util.h
src/: cli.yml  get_angle.rs  main.rs  orbitable.rs
src/util/: mod.rs  orbitable.rs
